<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My App Portfolio</string>
    <string name="main_header">My Nanodegree Apps!</string>
    <string name="action_settings">Settings</string>
    <string name="button_streamer">Spotify Streamer</string>
    <string name="button_scores">Scores App</string>
    <string name="button_library">Library App</string>
    <string name="button_build_it_bigger">Build It Bigger</string>
    <string name="button_xyz_reader">XYZ Reader</string>
    <string name="button_capstone">Capstone: My Own App</string>
    <string name="toast_format">This button will launch %s!</string>
    <string name="package_streamer">me.danco.spotifystreamer</string>
    <string name="launchapp_toast">App not found. Something went wrong!</string>
</resources>
