<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/AppsScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none" >

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
        android:layout_height="fill_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
        android:id="@+id/main"
        android:theme="@style/AppTheme"
        android:gravity="center_horizontal" >

        <TextView android:text="@string/main_header" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/main_header"
            android:gravity="center_horizontal"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textSize="22sp"
            android:textColor="#000" />

        <LinearLayout
            android:gravity="center_horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/apps"
            android:layout_below="@id/main_header"
            android:layout_marginTop="20dp"
            android:orientation="vertical">
            <Button
                android:id="@+id/button_streamer"
                android:text="@string/button_streamer"
                style="@style/AppButton"/>
            <Button
                android:id="@+id/button_scores"
                android:text="@string/button_scores"
                style="@style/AppButton"/>
            <Button
                android:id="@+id/button_library"
                android:text="@string/button_library"
                style="@style/AppButton"/>
            <Button
                android:id="@+id/button_build_it_bigger"
                android:text="@string/button_build_it_bigger"
                style="@style/AppButton"/>
            <Button
                android:id="@+id/button_xyz_reader"
                android:text="@string/button_xyz_reader"
                style="@style/AppButton"/>
            <Button
                android:id="@+id/button_capstone"
                android:text="@string/button_capstone"
                style="@style/AccentedAppButton"/>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>